--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
   ],
   "author": "Luis Crespo",
   "license": "ISC",
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/lcrespom/ng-crud.git"
+  },
   "devDependencies": {
     "coffee-script": "^1.9.1"
   },
