--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
   },
   "devDependencies": {
     "chalk": "^1.0.0",
-    "coffee-script": "^1.9.1"
+    "coffee-script": "^1.9.1",
+    "glob": "^5.0.5",
+    "uglify-js": "^2.4.20",
+    "underscore": "^1.8.3"
   },
   "dependencies": {
     "body-parser": "^1.12.2",
